--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -25,10 +25,10 @@
     uid: "{{ item.uid }}"
   become: yes
   loop: "{{ common__unix_users }}"
-- name: Deploy ansible user's public key
-  authorized_key:
-    user: ansible
-    state: present
+- name: "Deploy ansible user's public key"
+  ansible.posix.authorized_key:
+    user: "ansible"
+    state: "present"
     key: "{{ common__ansible_key_type }} {{ common__ansible_key }}"
 - name: Setup sudoers
   template:
