--- a/roles/openstack-ansible-deploy/defaults/main.yml
+++ b/roles/openstack-ansible-deploy/defaults/main.yml
@@ -1,2 +1,66 @@
 ---
 # defaults file for openstack-ansible-deploy
+
+openstack_ansible_deploy__storage_host_container_vars: {}
+
+openstack_ansible_deploy__user_config_cidr_networks:
+  container: "10.10.0.0/24"
+  storage: "10.11.0.0/24"
+  tunnel: "10.12.0.0/24"
+
+openstack_ansible_deploy__user_config_used_ips:
+  - "10.10.0.1,10.10.0.99"
+  - "10.10.0.200,10.10.0.254"
+  - "10.11.0.1,10.11.0.99"
+  - "10.11.0.200,10.11.0.254"
+  - "10.12.0.1,10.12.0.99"
+  - "10.12.0.200,10.12.0.254"
+
+openstack_ansible_deploy__user_config_global_overrides:
+  internal_lb_vip_address: "10.10.0.59"
+  external_lb_vip_address: "openstack.hogs.tswn.us"
+  management_bridge: "br-mgmt"
+  provider_networks:
+    - network:
+        container_bridge: "br-mgmt"
+        container_type: "veth"
+        container_interface: "eth1"
+        ip_from_q: "container"
+        type: "raw"
+        group_binds:
+          - "all_containers"
+          - "hosts"
+        is_container_address: true
+    - network:
+        container_bridge: "br-storage"
+        container_type: "veth"
+        container_interface: "eth2"
+        ip_from_q: "storage"
+        type: "raw"
+        group_binds:
+          - "cinder_api"
+          - "cinder_volume"
+          - "glance_api"
+          - "nova_compute"
+    - network:
+        container_bridge: "br-vxlan"
+        container_type: "veth"
+        container_interface: "eth10"
+        ip_from_q: "tunnel"
+        type: "vxlan"
+        range: "1:1000"
+        net_name: "vxlan"
+        group_binds:
+          - "compute_hosts"
+          - "network_hosts"
+    - network:
+        container_bridge: "br-vlan"
+        container_type: "veth"
+        container_interface: "eth11"
+        host_bind_override: "bond0"
+        type: "vlan"
+        range: "1,3,5,9,10,12,15,66:67,117,131,201,150"
+        net_name: "physnet1"
+        group_binds:
+          - "compute_hosts"
+          - "network_hosts"
