--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -222,6 +222,8 @@ bind_zones:
         ip: "10.67.0.12"
       - name: "front-north-west.camera.hogs"
         ip: "10.67.0.13"
+      - name: "front-north-east.camera.hogs"
+        ip: "10.67.0.14"
     networks:
       - "10.1.0"
       - "10.10.0"
