--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -45,6 +45,7 @@
   ansible.builtin.template:
     src: "hosts.j2"
     dest: "/etc/hosts"
+  become: yes
 
 # Platform-specific stuff
 - import_tasks: "freebsd.yml"
