--- a/plays/hosts/loki.hogs.tswn.us.yml
+++ b/plays/hosts/loki.hogs.tswn.us.yml
@@ -6,3 +6,7 @@
       tags:
         - "docker"
         - "zwavejs2mqtt"
+    - role: docker-frigate
+      tags:
+        - docker
+        - frigate
