--- a/firewall_zones/vyos_home/nowan/from-home-ipv4.yml
+++ b/firewall_zones/vyos_home/nowan/from-home-ipv4.yml
@@ -6,7 +6,7 @@
   source:
     group:
       address_group: "NOWAN-TALKERS-from-HOME-v4"
-- description: "Allow viseron to talk to cameras"
+- description: "Allow hosts to talk to cameras"
   action: "accept"
   state:
     new: true
@@ -15,4 +15,4 @@
       address_group: "CAMERAS-v4"
   source:
     group:
-      address_group: "VISERON-v4"
+      address_group: "CAMERA-TALKERS-v4"
