--- a/roles/common-rpi/defaults/main.yml
+++ b/roles/common-rpi/defaults/main.yml
@@ -3,6 +3,7 @@
 common_rpi__audio: no
 common_rpi__cm4io_fan: {}
 common_rpi__cpu_i2c: no
+common_rpi__gpu_mem: no
 common_rpi__dtoverlays: []
 common_rpi__i2c_rtc: ""
 common_rpi__overclock: no
