--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -92,6 +92,8 @@ bind_zones:
       - name: "loki.hogs"
         ip: "10.117.0.23"
         ipv6: "fd36:3eb3:43b0:75::17"
+        aliases:
+          - "frigate.hogs"
       - name: "monitor.house.gem.hogs"
         ip: "10.117.0.24"
         ipv6: "fd36:3eb3:43b0:75::18"
