--- a/roles/docker-frigate/tasks/main.yml
+++ b/roles/docker-frigate/tasks/main.yml
@@ -59,7 +59,7 @@
         user: frigate
         password: "{FRIGATE_MQTT_PASSWORD}"
       cameras:
-        front-porch:
+        Front_Porch:
           detect:
             fps: 5
             height: 720
@@ -76,7 +76,7 @@
               - path: rtsp://frigate:{FRIGATE_RTSP_PASSWORD}@front-porch.camera.hogs.tswn.us:554/cam/realmonitor?channel=1&subtype=2
                 roles:
                   - detect
-        front-north-east:
+        Front_North_East:
           detect:
             fps: 5
             height: 720
