enable frigate birdseye for all cameras

--- a/roles/docker-frigate/tasks/main.yml
+++ b/roles/docker-frigate/tasks/main.yml
@@ -54,6 +54,9 @@
   register: config
   vars:
     frigate_config:
+      birdseye:
+        enabled: yes
+        mode: continuous
       cameras:
         Front_Porch:
           detect:
