capture more before an event

--- a/roles/docker-frigate/tasks/main.yml
+++ b/roles/docker-frigate/tasks/main.yml
@@ -123,6 +123,8 @@
           - person
       record:
         enabled: yes
+        events:
+          pre_capture: 10
       snapshots:
         enabled: yes
 
