--- a/vyos.yml
+++ b/vyos.yml
@@ -776,3 +776,19 @@
         save: yes
       tags:
         - "routing"
+
+    - name: Setup DNS forwarding for .hogs.tswn.us hosts
+      vyos.vyos.vyos_config:
+        lines:
+          - set service dns forwarding allow-from 127.0.0.0/8
+          - set service dns forwarding domain 0.10.10.in-addr.arpa server 10.10.0.117
+          - set service dns forwarding domain 0.117.10.in-addr.arpa server 10.10.0.117
+          - set service dns forwarding domain hogs.tswn.us server 10.10.0.1
+          - set service dns forwarding listen-address 127.0.0.1
+          # https://www.vultr.com/docs/vultr-dns-servers
+          - set service dns forwarding name-server 108.61.10.10
+          - set service dns forwarding name-server 2001:19f0:300:1704::6
+        save: yes
+      tags:
+        - services
+        - dns
