bring up centurylink.routers.hogs.tswn.us

--- a/vyos.yml
+++ b/vyos.yml
@@ -108,6 +108,7 @@
         state: "replaced"
       tags:
         - "ospf"
+      when: vyos_ospf_interfaces__config | length > 0
 
 #
 # vyos_home
@@ -792,3 +793,38 @@
       tags:
         - services
         - dns
+
+#
+# vyos_wan
+#
+
+- hosts: vyos_wan
+  gather_facts: false
+  tasks:
+    - name: Gather config
+      vyos.vyos.vyos_facts:
+        gather_subset: config
+      tags:
+        - always
+
+    - name: Setup default route
+      vyos.vyos.vyos_config:
+        lines:
+          - "set protocols static interface-route 0.0.0.0/0 next-hop-interface {{ vyos_wan__outbound_interface }}"
+      tags:
+        - routing
+
+    - name: Setup NAT masquerade rules
+      vyos.vyos.vyos_config:
+        lines:
+          - "set nat source rule {{ (rule_number + 1) * 10 }} outbound-interface {{ vyos_wan__outbound_interface }}"
+          - "set nat source rule {{ (rule_number + 1) * 10 }} source address {{ item }}"
+          - "set nat source rule {{ (rule_number + 1) * 10 }} translation address masquerade"
+      loop:
+        - 10.0.0.0/8
+        - 172.16.0.0/12
+        - 192.168.0.0/16
+      loop_control:
+        index_var: rule_number
+      tags:
+        - nat
