--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -180,6 +180,8 @@ bind_zones:
         ip: "10.10.0.65"
       - name: "compute02.hogs"
         ip: "10.10.0.66"
+      - name: "centurylink.routers.hogs"
+        ip: "10.10.0.70"
       - name: "storage1.hogs"
         ip: "10.10.0.80"
 
