--- a/group_vars/vyos.yml
+++ b/group_vars/vyos.yml
@@ -19,3 +19,6 @@ vyos_ospfv2__areas:
       - address: "10.10.1.4/30"
       - address: "10.117.0.0/23"
       - address: "10.117.2.0/24"
+
+vyos_ospf_interfaces__config: []
+vyos_ospfv2_parameters__router_id: "10.9.0.{{ vyos__host_id_ipv4 }}"
