--- a/vyos.yml
+++ b/vyos.yml
@@ -123,6 +123,13 @@
       tags:
         - always
 
+    - name: Setup default route
+      vyos.vyos.vyos_config:
+        lines:
+          - "set protocols static route 0.0.0.0/0 next-hop 10.3.0.70"
+      tags:
+        - routing
+
 #
 # vyos_home
 #
