--- a/firewall_zones/vyos_gateway/local/from-isp-transit-ipv4.yml
+++ b/firewall_zones/vyos_gateway/local/from-isp-transit-ipv4.yml
@@ -1,4 +1,9 @@
 ---
+- action: accept
+  protocol: vrrp
+  source:
+    group:
+      address_group: PEER-v4
 - description: Allow ICMP
   action: accept
   protocol: icmp
