--- a/vyos.yml
+++ b/vyos.yml
@@ -504,10 +504,13 @@
           - "set service dns forwarding allow-from 192.168.1.0/24"
           - "set service dns forwarding allow-from fd00::/8"
           - "set service dns forwarding domain 0.10.10.in-addr.arpa server 10.10.0.3"
+          - "set service dns forwarding domain 0.10.10.in-addr.arpa server 10.10.0.4"
           - "set service dns forwarding domain 0.117.10.in-addr.arpa server 10.10.0.3"
+          - "set service dns forwarding domain 0.117.10.in-addr.arpa server 10.10.0.4"
           - "set service dns forwarding domain 5.7.0.0.0.b.3.4.3.b.e.3.6.3.d.f.ip6.arpa server 10.10.0.3"
           - "set service dns forwarding domain a.0.0.0.0.b.3.4.3.b.e.3.6.3.d.f.ip6.arpa server 10.10.0.3"
           - "set service dns forwarding domain tswn.us server 10.10.0.3"
+          - "set service dns forwarding domain tswn.us server 10.10.0.4"
           - "set service dns forwarding domain tswn.us server fd36:3eb3:43b0:a::3"
           - "set service dns forwarding name-server 1.1.1.2"
           - "set service dns forwarding name-server 1.0.0.2"
