--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -1,4 +1,23 @@
 ---
+vyos_dns_forwarding__allow_from:
+  - 127.0.0.0/8
+vyos_dns_forwarding__domain_servers:
+  - domain: 0.10.10.in-addr.arpa
+    servers:
+      - 10.10.0.1
+  - domain: 0.117.10.in-addr.arpa
+    servers:
+      - 10.10.0.1
+  - domain: hogs.tswn.us
+    servers:
+      - 10.10.0.1
+vyos_dns_forwarding__listen_addresses:
+  - 127.0.0.1
+vyos_dns_forwarding__name_servers:
+  # https://www.vultr.com/docs/vultr-dns-servers
+  - 108.61.10.10
+  - 2001:19f0:300:1704::6
+
 vyos__ssh_address_ipv4: 149.248.37.12
 
 vyos_firewall__zones:
