--- a/roles/vyos-vrrp/defaults/main.yml
+++ b/roles/vyos-vrrp/defaults/main.yml
@@ -13,3 +13,16 @@
 #     virtual_address: 10.10.10.1/24
 #     vrid: 1
 vyos_vrrp__groups: []
+
+# Defines connection tracking synchronization that utilizes VRRP.
+# vyos_vrrp__conntrack_sync:
+#   accept_protocols:
+#     - icmp
+#     - udp
+#     - tcp
+#   event_listen_queue_size: 8
+#   interface: eth1
+#   peer_address: 10.9.0.42
+#   sync_group: MAIN
+#   sync_queue_size: 8
+vyos_vrrp__conntrack_sync: {}
